fix links and text aligned center

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -119,7 +119,8 @@ body
     border-bottom: 1px solid #F8F8F8
   &-map
     // filter: grayscale(90%)
-
+  &-title
+    text-align: center
   &-item
     max-width: 310px
     width: 100%
@@ -234,6 +235,7 @@ body
       color: #A2A2A2
   
 .financing
+  margin-bottom: 100px
 
   &-list
     list-style: none
